# bazel-scalapb-example

./: .gitignore  BUILD  WORKSPACE  jvm-dependencies.yaml
.ijwb/: .bazelproject
scala-app/: BUILD.bazel
scala-app/src/main/protobuf/: Messages.proto
scala-app/src/main/scala/org/example/converters/: ProtobufWrappers.scala
scala-app/src/main/scala/org/example/domain/: Gender.scala
